# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-datasource-avro"
description = "datafusion-datasource-avro"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["apache-avro", "num-traits", "datafusion-common/avro"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
apache-avro = { version = "0.17", optional = true }
num-traits = { version = "0.2", optional = true }
datafusion-common = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true

[lib]
name = "datafusion_datasource_avro"
path = "src/mod.rs"
