[package]
name = "datafusion-execution"
description = "Execution configuration support for DataFusion query engine"
version = "19.0.0"
homepage = "https://github.com/apache/arrow-datafusion"
repository = "https://github.com/apache/arrow-datafusion"
readme = "README.md"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = [ "arrow", "query", "sql" ]
edition = "2021"
rust-version = "1.62"

[lib]
name = "datafusion_execution"
path = "src/lib.rs"


[dependencies]
datafusion-common = { path = "../common", version = "19.0.0" }
datafusion-expr = { path = "../expr", version = "19.0.0" }
hashbrown = { version = "0.13", features = ["raw"] }
log = "^0.4"
parking_lot = "0.12"
rand = "0.8"
tempfile = "3"