# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-execution"
description = "Execution configuration support for DataFusion query engine"
keywords = [ "arrow", "query", "sql" ]
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "datafusion_execution"
path = "src/lib.rs"

[dependencies]
dashmap = "5.4.0"
datafusion-common = { path = "../common", version = "25.0.0" }
datafusion-expr = { path = "../expr", version = "25.0.0" }
hashbrown = { version = "0.13", features = ["raw"] }
log = "^0.4"
object_store = "0.6.1"
parking_lot = "0.12"
rand = "0.8"
tempfile = "3"
url = "2.2"
